Refs #11038 #11042 Fix Z-index issue

--- a/app/assets/stylesheets/_misc.sass
+++ b/app/assets/stylesheets/_misc.sass
@@ -1,5 +1,5 @@
 .modal-backdrop
-  z-index: 2050
+  z-index: 2002
 
 .modal
   z-index: 2052
